# DATN

./: .gitignore
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  RAG_IMPLEMENTATION_GUIDE.md  README.md  code.md  config.yaml  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  document_naming.py
backend/app/db/: dependencies.py  processing_status.py  repository.py
backend/app/modules/: __init__.py
backend/app/modules/audio_overviews/: __init__.py  repository.py  router.py  schemas.py  service.py  tasks.py
backend/app/modules/slides/: __init__.py  browser_pdf_renderer.py  component_utils.py  constants.py  models.py  (+11 more)
backend/app/routers/: auth.py  notebooks.py
backend/app/schemas/: auth.py  notebooks.py  rag.py  task_schemas.py
backend/app/services/: notebooks.py
backend/app/training/: README.md  training_dataset_multitopic.json
backend/app/workers/: celery_app.py
backend/models/: README.md
backend/scripts/: debug_chunking.py  optimize_rag.py
backend/supabase/: .gitignore
backend/supabase/migrations/: 002_notebook_rag_integration.sql  003_notebook_rag_advisor_cleanup.sql  004_audio_overviews_storage.sql  005_slide_decks_storage.sql
backend/tests/: test_audio_overviews.py  test_auth_dependencies.py  test_auth_registration.py  test_cache_registry.py  test_document_worker_conversion.py  test_notebook_workspace.py  test_pdf_processor_pages.py  test_rag_citations.py  test_rag_stream_cache.py  test_rag_threshold_benchmark.py  test_rag_two_stage_benchmark.py  test_slides.py
(+118 files in other folders)
