[project]
name = "datn-backend"
version = "0.1.0"
description = "Backend API for DATN auth and future RAG modules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.121.2",
    "gunicorn>=22.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "redis>=7.0.1",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
]

[tool.pyright]
include = ["app", "tests"]
