[project]
name = "datn-backend"
version = "0.1.0"
description = "Backend API for DATN auth and future RAG modules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.5.3",
    "chonkie[semantic,st]==1.4.2",
    "dspy-ai==3.0.4",
    "email-validator>=2.2.0",
    "fastapi>=0.121.2",
    "flower>=2.0.1",
    "google-genai==1.50.1",
    "google-generativeai==0.8.5",
    "gunicorn>=22.0.0",
    "jinja2>=3.1.6",
    "marker-pdf[full]==1.10.1",
    "openai>=1.54.0",
    "pgvector>=0.3.0",
    "pybreaker>=1.4.1",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.0",
    "redis>=7.0.1",
    "sentence-transformers==5.1.2",
    "supabase>=2.24.0",
    "torch==2.9.1",
    "uvicorn>=0.38.0",
]

[tool.pyright]
include = ["app", "tests"]
